tests/externInfo/dhrystone-exported/db/invalid/path/Proc2.c.ttp
./db/invalid/path/Proc2.c : 66.23-66.31 : -- value at line 68, column 19 --# # IntParIO ; pointer ; { IntLoc1 } + {0}# 
./db/invalid/path/Proc2.c : 71.8-71.14 : -- value at line 71, column 8 --# #                                   IntLoc ; signed int ; [-2147483648, 2147483647]#  #-- value at line 72, column 8 --# # IntLoc ; signed int ; {13} /\ != 0# 
./db/invalid/path/Proc2.c : 71.18-71.26 : -- value at line 71, column 8 --# # IntParIO ; pointer ; { IntLoc1 } + {0}#  #-- value at line 72, column 8 --# # IntParIO ; pointer ; { IntLoc1 } + {0}# 
./db/invalid/path/Proc2.c : 74.20-74.29 : -- value at line 74, column 16 --# #                                    Char1Glob ; unsigned char ; {65} /\ != 0#  #-- value at line 76, column 24 --# #                                      Char1Glob ; unsigned char ; {65} /\ != 0# 
./db/invalid/path/Proc2.c : 76.26-76.32 : -- value at line 76, column 24 --# # IntLoc ; signed int ; {13} /\ != 0#  #-- value at line 77, column 24 --# # IntLoc ; signed int ; {12} /\ != 0# 
./db/invalid/path/Proc2.c : 77.25-77.33 : -- value at line 77, column 24 --# # IntParIO ; pointer ; { IntLoc1 } + {0}#  #-- value at line 78, column 24 --# #                                      IntParIO ; pointer ; { IntLoc1 } + {0}# 
./db/invalid/path/Proc2.c : 77.36-77.42 : -- value at line 77, column 24 --# # IntLoc ; signed int ; {12} /\ != 0#  #-- value at line 78, column 24 --# # IntLoc ; signed int ; {12} /\ != 0# 
./db/invalid/path/Proc2.c : 77.45-77.52 : -- value at line 77, column 24 --# # IntGlob ; signed int ; {5} /\ != 0#  #-- value at line 78, column 24 --# # IntGlob ; signed int ; {5} /\ != 0# 
./db/invalid/path/Proc2.c : 78.24-78.31 : -- value at line 78, column 24 --# # counter ; signed int ; {814} /\ != 0#  #-- value at line 79, column 24 --# # counter ; signed int ; {827} /\ != 0# 
./db/invalid/path/Proc2.c : 79.24-79.31 : -- value at line 79, column 24 --# #                                    EnumLoc ; signed int ; [-2147483648, 2147483647]#  #-- value at line 81, column 24 --# # EnumLoc ; signed int ; {0}# 
./db/invalid/path/Proc2.c : 81.24-81.31 : -- value at line 81, column 24 --# # counter ; signed int ; {827} /\ != 0#  #-- value at line 82, column 16 --# # counter ; signed int ; {844} /\ != 0# 
./db/invalid/path/Proc2.c : 82.20-82.27 : -- value at line 82, column 16 --# # EnumLoc ; signed int ; {0}#  #-- value at line 83, column 24 --# # EnumLoc ; signed int ; {0}# 
